# six-degree-bacon

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  pages.yaml  qid-validation.yaml
data/: cooccurrence.json  seed.json
docs/: HANDOVER.md  confidence-rubric.md  review-findings.md
docs/adr/: 0001-stack-and-zero-llm.md  0002-statement-reified-data-model.md  0003-endpoint-surprise-cooccurrence.md  0004-wikidata-harvester.md  0005-harvest-merge-corroboration.md  0006-wow-score-ranking.md  0007-improbable-adjacency-archetype.md  0008-seed-qid-repair.md  0009-harvest-node-enrichment.md  0010-guided-walk-scaling.md  0011-hellenistic-india-buddhism-bridge.md  0012-default-hop-cap.md  0013-web-ui.md  0014-corroboration-spike.md  0015-static-site-export.md  0016-ancient-greece-cluster.md  0017-ancient-egypt-cluster.md  0018-islamic-golden-age-cluster.md  0019-scientific-revolution-cluster.md  0020-east-asia-cluster.md  0021-journey-hop-cap-4-to-3.md  0022-norse-celtic-myth-cluster.md  0023-chinese-tech-cluster.md  0024-west-africa-islam-cluster.md  0025-second-order-cooccurrence.md  0026-divine-descent-cluster.md  0027-disjoint-archetype-hop-ranges.md  0028-single-claim-til.md  0029-full-link-jaccard-similarity.md  0030-deterministic-graph-layout.md  0031-map-first-terminal-ui.md  0032-other-domain-fallback-split.md  0033-renaissance-cluster.md  0034-domain-jump-information.md  0035-close-open-temporal-extents.md  0039-region-jump-surprise-term.md  (+16 more)
eval/: golden.json
sdb/: __init__.py  __main__.py  brains.py  cli.py  constants.py  layout.py  serialize.py  site.py  sweep.py  viz.py  web.py
tests/: conftest.py  test_brains.py  test_confidence.py  test_cooccurrence.py  test_eval_golden.py  test_graph.py  test_harvest.py  test_harvest_mapping.py  test_layout.py  test_loader.py  test_merge.py  test_narrate.py  test_pipeline.py  test_schema.py  test_serialize.py  test_site.py  test_surprise.py  test_sweep.py  test_traversal.py  test_validate.py  test_web.py
(+24 files in other folders)
