[project]
name = "six-degree-bacon"
version = "0.1.0"
description = "Discover the longest *surprising* sourced path between ideas — a knowledge-graph trivia engine."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Six Degree Bacon" }]
keywords = ["knowledge-graph", "trivia", "networkx", "provenance"]
dependencies = [
    "networkx>=3.3",
    "pydantic>=2.7",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "mypy>=1.10", "pytest>=8.2"]

[project.scripts]
sdb = "sdb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sdb"]

# ---------------------------------------------------------------------------
# Linting & formatting (ruff)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "D", "C4", "PTH", "ARG", "RUF"]
# D203/D213: mutually exclusive docstring styles we don't use.
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ARG", "N802"]
"notebooks/*" = ["D", "E", "F"]

# ---------------------------------------------------------------------------
# Type checking (mypy)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ---------------------------------------------------------------------------
# Tests (pytest)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
